--- a/app/src/main/res/layout/fragment_profile_list.xml
+++ b/app/src/main/res/layout/fragment_profile_list.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.fbu_app.ui.home.PostListFragment"
+    android:name="com.example.fbu_app.ui.profile.ProfilePostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.home.PostListFragment"
-    tools:listitem="@layout/fragment_post" />
+    tools:context=".ui.profile.ProfilePostFragment"
+    tools:listitem="@layout/fragment_profile_post" />
