--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -15,7 +15,7 @@
             android:layout_height="100dp"
             android:layout_below="@+id/etLocation"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="0dp"
             android:orientation="horizontal" />
 
@@ -43,7 +43,7 @@
             android:hint="date"
             android:inputType="date" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/etLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,15 +53,16 @@
             android:layout_marginTop="40dp"
             android:ems="10"
             android:hint="location"
-            android:inputType="textPersonName" />
+            android:inputType="textAutoComplete" />
 
         <Button
+            android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/addStuff"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp"
-            android:text="Submit"
-            android:layout_centerHorizontal="true"/>
+            android:text="Submit" />
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
