--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:id="@+id/addStuff"
             android:layout_width="match_parent"
-            android:layout_height="122dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/etLocation"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="50dp"
