--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ivNewImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_weight="1"
         tools:srcCompat="@tools:sample/avatars" />
 </LinearLayout>
