--- a/app/src/main/res/layout/fragment_newpost_list.xml
+++ b/app/src/main/res/layout/fragment_newpost_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/list"
     android:name="com.example.fbu_app.ui.dashboard.NewPostFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:orientation="horizontal"
