--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="47dp"
             android:layout_marginTop="223dp"
-            android:text="Show Modal Overlay" />
+            android:text="Show Modal Overlay"
+            android:visibility="invisible"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -29,5 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".5"
-        android:orientation="horizontal"></RelativeLayout>
+        android:orientation="horizontal"
+        android:paddingBottom="50dp"></RelativeLayout>
 </LinearLayout>
