--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <fragment android:id="@+id/autocomplete_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        />
+
     <RelativeLayout
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".5"
+        android:layout_marginTop="0dp"
         android:orientation="horizontal">
 
         <Button
@@ -23,6 +30,7 @@
             android:layout_marginTop="223dp"
             android:text="Show Modal Overlay"
             android:visibility="invisible"/>
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -32,4 +40,5 @@
         android:layout_weight=".5"
         android:orientation="horizontal"
         android:paddingBottom="50dp"></RelativeLayout>
+
 </LinearLayout>
