fixed layout issues

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
@@ -25,22 +25,20 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="564dp"
         android:layout_toEndOf="@+id/ivImage"
         android:text="TextView"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/tvLocation"
-        android:layout_width="269dp"
-        android:layout_height="30dp"
+        android:layout_width="268dp"
+        android:layout_height="53dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="false"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="34dp"
         android:layout_marginTop="59dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="564dp"
+        android:layout_marginEnd="9dp"
         android:layout_toEndOf="@+id/ivImage"
         android:text="TextView" />
 
