--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -30,7 +30,7 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/tvLocation"
+        android:id="@+id/tvAddress"
         android:layout_width="268dp"
         android:layout_height="53dp"
         android:layout_alignParentEnd="true"
