--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -14,6 +14,7 @@
         android:text="Exit"></Button>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.dashboard.PostDetailDialogFragment">
@@ -23,15 +24,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mvLocation"
+            <RelativeLayout
+                android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginBottom="0dp" />
+                android:orientation="vertical"></RelativeLayout>
 
             <TextView
                 android:id="@+id/tvItemName"
@@ -45,6 +42,7 @@
                 android:textAlignment="center"
                 android:textSize="30sp" />
 
+
             <TextView
                 android:id="@+id/tvAddress"
                 android:layout_width="match_parent"
@@ -56,6 +54,7 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textSize="18sp" />
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
