--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -54,6 +54,12 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textSize="18sp" />
+            <RelativeLayout
+                android:id="@+id/images"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="50dp"
+                android:orientation="vertical"></RelativeLayout>
 
         </LinearLayout>
 
