--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -55,7 +55,7 @@
                 android:textAlignment="center"
                 android:textSize="18sp" />
             <RelativeLayout
-                android:id="@+id/images"
+                android:id="@+id/rvImages"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="50dp"
