--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -13,7 +13,7 @@
             android:id="@+id/addStuff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/etLocation"
+            android:layout_below="@+id/etNotes"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="0dp"
@@ -55,6 +55,18 @@
             android:hint="location"
             android:inputType="textAutoComplete" />
 
+        <EditText
+            android:id="@+id/etNotes"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_below="@+id/etLocation"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="97dp"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="Notes"
+            android:inputType="textMultiLine" />
+
         <Button
             android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
@@ -63,6 +75,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp"
             android:text="Submit" />
+
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
