--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -3,21 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
     tools:context=".ui.dashboard.AddFragment">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/addStuff"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/etNotes"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="0dp"
-            android:orientation="horizontal" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/etTitle"
@@ -27,6 +19,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="59dp"
             android:layout_marginEnd="103dp"
+            android:layout_marginStart="97dp"
             android:ems="10"
             android:hint="title"
             android:inputType="textPersonName" />
@@ -67,15 +60,27 @@
             android:hint="Notes"
             android:inputType="textMultiLine" />
 
+        <LinearLayout
+            android:id="@+id/addStuff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etNotes"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="0dp"
+            android:orientation="horizontal" />
+
         <Button
             android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/addStuff"
             android:layout_centerHorizontal="true"
+            android:layout_marginStart="97dp"
             android:layout_marginTop="50dp"
             android:text="Submit" />
 
 
-    </RelativeLayout>
+
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
