--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -54,6 +54,16 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="14sp" />
+
             <RelativeLayout
                 android:id="@+id/rvImages"
                 android:layout_width="match_parent"
