added swipe up/down to expand/collapse list and map views

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,14 +22,14 @@
         android:layout_weight=".5"
         android:orientation="horizontal">
 
-    </RelativeLayout>
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".5"
         android:orientation="horizontal"
-        android:paddingBottom="50dp"></RelativeLayout>
+        android:paddingBottom="50dp"></LinearLayout>
 
 </LinearLayout>
