--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -98,10 +98,11 @@
 
         <LinearLayout
             android:id="@+id/addStuff"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/etNotes"
             android:layout_alignParentEnd="true"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="0dp"
             android:orientation="horizontal" />
