--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -88,7 +88,7 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etDate"
+                android:id="@+id/etNotes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
