UI improvements to card view

--- a/app/src/main/res/layout/fragment_profile_cardview.xml
+++ b/app/src/main/res/layout/fragment_profile_cardview.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="4dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.profile.ProfileCardViewFragment">
 
