--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:contentPadding="16dp"
-    card_view:cardElevation="5dp"
-    card_view:cardCornerRadius="5dp"
-    android:layout_marginBottom="8dp"
     android:layout_marginLeft="4dp"
+    android:id="@+id/mcvCards"
     android:layout_marginRight="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginTop="4dp"
+    card_view:cardBackgroundColor="#F94144"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="5dp"
     card_view:cardPreventCornerOverlap="true"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    card_view:contentPadding="16dp">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="25dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvTitle"
@@ -23,7 +34,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Title" />
+            android:text="Title"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
