added email button to profile screen

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:ems="10"
             app:startIconDrawable="@drawable/ic_baseline_title_24"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:ems="10"
             android:hint="date"
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:id="@+id/etLocationLayout"
             android:ems="10"
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:ems="10"
             android:hint="notes"
@@ -103,7 +103,7 @@
             android:layout_below="@+id/etNotes"
             android:layout_alignParentEnd="true"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="0dp"
             android:orientation="horizontal" />
 
@@ -114,7 +114,10 @@
             android:layout_below="@id/addStuff"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="265dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:background="#F94144"
+            android:backgroundTint="#F94144"
             android:text="Submit"
             app:cornerRadius="10dp" />
 
