--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,35 +39,14 @@
         android:layout_gravity="center"
         android:text="TextView" />
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+    <ImageButton
+        android:id="@+id/ibEmail"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
-        android:text="Logout" />
+        android:background="#FFFFFF"
+        android:src="@drawable/ic_baseline_email_24"
+        android:tint="#BF000000" />
 
-    <Button
-        android:id="@+id/btnFB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:layout_gravity="center"
-        android:text="Disconnect from Facebook" />
-
-    <LinearLayout
-        android:id="@+id/posts"
-        android:layout_width="match_parent"
-        android:layout_height="148dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="333dp"
-        android:layout_marginBottom="27dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal"></LinearLayout>
 </LinearLayout>
