--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_baseline_person_24"
-        android:title="Profile" />
+        android:icon="@drawable/ic_baseline_more_horiz_24"
+        android:title="More" />
 
 </menu>
