--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -141,8 +141,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="50dp"
+                    android:gravity="center"
+                    android:layout_marginRight="50dp"
                     android:layout_marginTop="20dp">
 
                     <RelativeLayout
