--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".5"
-        android:orientation="horizontal"
-        android:paddingBottom="50dp"></LinearLayout>
+        android:paddingBottom="60dp"
+        android:orientation="horizontal"></LinearLayout>
 
 </LinearLayout>
