--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,48 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
 
     <ImageView
         android:id="@+id/ivImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:padding="10dp"
+        android:layout_gravity="center_vertical"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="false"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="0dp"
-        android:layout_toEndOf="@+id/ivImage"
-        android:text="TextView"
-        android:textColor="#1E1C1C"
-        android:textSize="24sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="34dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="0dp"
+            android:text="TextView"
+            android:textColor="#1E1C1C"
+            android:textSize="24sp" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/chip_group_tags"
+            android:layout_marginStart="34dp"
+            android:layout_marginTop="0dp">
+        </com.google.android.material.chip.ChipGroup>
 
     <TextView
         android:id="@+id/tvAddress"
         android:layout_width="268dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="false"
-        android:layout_centerHorizontal="true"
         android:layout_marginStart="34dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="9dp"
-        android:layout_toEndOf="@+id/ivImage"
+        android:layout_marginTop="5dp"
         android:drawableStart="@drawable/ic_baseline_location_on_24"
         android:text="TextView"
         android:textColor="#1E1C1C" />
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
